# OpencvDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/justcode/clanugragedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/justcode/clanugragedemo/: DialogUtil.java  FileUtilcll.java  MainActivity.java  RequestCode.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/justcode/clanugragedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
